--- a/AceCoder/resources/templates/resources_base.html
+++ b/AceCoder/resources/templates/resources_base.html
@@ -28,6 +28,12 @@
             ul.left-bar{
                 padding-left: 15px;
             }
+            li,ui {
+                margin-left: 30px; 
+                font-size: 18px;
+                color: lightgrey; 
+                text-shadow: 1px 1px black
+            }
             html, body {
                 min-height: 100vh;
                 margin: 0;
