--- a/AceCoder/templates/navbar.html
+++ b/AceCoder/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load socialaccount %}
 <style>
-    li,ui {
+    .navbar li,ui {
         margin-left: 30px; 
         font-size: 18px;
         color: lightgrey; 
