--- a/AceCoder/templates/navbar.html
+++ b/AceCoder/templates/navbar.html
@@ -28,7 +28,7 @@
                 <a class="nav-link active" href="{% url "upsolve_home" %}" style="font-weight: bold; color: lightgrey">Upsolve</a>
             </li>
         </ul>
-        {% comment %} <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             {% if user.is_authenticated %}
             <li class="nav-item d-flex align-items-center" style="font-weight: bold; margin-right: 20px">
                 Role: {% if is_admin %} <div style="color: red; padding-left: 10px"> Admin</div> {% else %} Student {% endif %}
@@ -41,7 +41,7 @@
                 <a class="nav-link active" href="{% provider_login_url 'google' %}?next=/" style="font-weight: bold; color: lightgrey"><button class='btn btn-success' style="color: white">Login</button></a>
             </li>
             {% endif %}
-        </ul> {% endcomment %}
+        </ul>
         </div>
     </div>
     {% comment %} <hr style="background: red;"> {% endcomment %}
